--- a/src/main/webapp/principal.xhtml
+++ b/src/main/webapp/principal.xhtml
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
 
 
 <h:head>
@@ -12,31 +13,31 @@
 
 <h:body>
 
-bienvenidos pricipal
-<h:dataTable id="tblEmpleados" var="empleado"
+<p:panel header="Lista de Empleados" >
+<p:dataTable id="tblEmpleados" var="empleado"
 		value="#{principalController.empleados}" headerClass="headerTable" rowClasses="rowTable rowTableLine">
 
-		<h:column>
-			<f:facet name="header">Nombre</f:facet>
+		<p:column headerText="Nombre">
+			
 			<h:outputText value="#{empleado.nombre}"></h:outputText>
-		</h:column>
+		</p:column>
 
-		<h:column>
-			<f:facet name="header">Apellido</f:facet>
+		<p:column headerText="Apellido">
+			
 			<h:outputText value="#{empleado.apellido}"></h:outputText>
-		</h:column>
+		</p:column>
 
-		<h:column>
-			<f:facet name="header">Ciudad</f:facet>
+		<p:column  headerText="Ciudad">
+		
 			<h:outputText value="#{empleado.ciudad}"></h:outputText>
-		</h:column>
+		</p:column>
 
-		<h:column>
-			<f:facet name="header">Genero</f:facet>
+		<h:column headerClass="Genero">
+			
 			<h:outputText value="#{empleado.genero}"></h:outputText>
 		</h:column>
-	</h:dataTable>
-
+	</p:dataTable>
+</p:panel>
 
 </h:body>
 
